tests/dataset/tpc-ds/compiler/pl/q27.error
run: exit status 2
[
  {
    "agg1":0,
    "agg2":0,
    "agg3":0,
    "agg4":0,
    "i_item_id":"ITEM1",
    "s_state":"CA"
  }
]
ERROR: /tmp/q27.pl:64: user:main Unknown message: error('expect failed')
